# bookworm

./: .env.example  .gitignore  README.md  pyproject.toml
src/bookworm/: app.py  config.py
src/bookworm/parsers/: base.py  docx_parser.py  epub_parser.py  markdown_parser.py  mobi_parser.py  pdf_parser.py  txt_parser.py
src/bookworm/translation/: engine.py
src/bookworm/ui/: themes.py
src/bookworm/ui/screens/: library_screen.py  reader_screen.py
tests/: conftest.py  test_config.py  test_database.py  test_models.py  test_parsers.py  test_translation.py
